// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`drawCollageImage > zeichnet eckigen gestrichelten Rahmen mit Rahmenschatten 1`] = `
[
  "save()",
  "translate(60,70)",
  "rotate(0)",
  "globalAlpha=1",
  "shadowOffsetX=0",
  "shadowOffsetY=0",
  "shadowBlur=0",
  "shadowColor=#000",
  "drawImage([obj],-50,-50,100,100)",
  "shadowOffsetX=0",
  "shadowOffsetY=0",
  "shadowBlur=0",
  "shadowColor=transparent",
  "shadowOffsetX=0",
  "shadowOffsetY=0",
  "shadowBlur=7",
  "shadowColor=#000",
  "beginPath()",
  "rect(-50,-50,100,100)",
  "strokeStyle=#000",
  "lineWidth=1",
  "setLineDash([obj])",
  "stroke()",
  "setLineDash([obj])",
  "shadowOffsetX=0",
  "shadowOffsetY=0",
  "shadowBlur=0",
  "shadowColor=transparent",
  "restore()",
]
`;

exports[`drawCollageImage > zeichnet ein einfaches Bild 1`] = `
[
  "save()",
  "translate(60,70)",
  "rotate(0)",
  "globalAlpha=1",
  "drawImage([obj],-50,-50,100,100)",
  "restore()",
]
`;

exports[`drawCollageImage > zeichnet runde Ecken mit Schatten und Doppelrahmen 1`] = `
[
  "save()",
  "translate(60,70)",
  "rotate(0.5235987755982988)",
  "scale(-1,1)",
  "transform(1,0,0.17632698070846498,1,0,0)",
  "globalAlpha=0.5",
  "shadowOffsetX=3",
  "shadowOffsetY=4",
  "shadowBlur=5",
  "shadowColor=#111",
  "beginPath()",
  "moveTo(-38,-50)",
  "lineTo(38,-50)",
  "arcTo(50,-50,50,-38,12)",
  "lineTo(50,38)",
  "arcTo(50,50,38,50,12)",
  "lineTo(-38,50)",
  "arcTo(-50,50,-50,38,12)",
  "lineTo(-50,-38)",
  "arcTo(-50,-50,-38,-50,12)",
  "closePath()",
  "fillStyle=#000000",
  "fill()",
  "shadowOffsetX=0",
  "shadowOffsetY=0",
  "shadowBlur=0",
  "shadowColor=transparent",
  "beginPath()",
  "moveTo(-38,-50)",
  "lineTo(38,-50)",
  "arcTo(50,-50,50,-38,12)",
  "lineTo(50,38)",
  "arcTo(50,50,38,50,12)",
  "lineTo(-38,50)",
  "arcTo(-50,50,-50,38,12)",
  "lineTo(-50,-38)",
  "arcTo(-50,-50,-38,-50,12)",
  "closePath()",
  "clip()",
  "drawImage([obj],-50,-50,100,100)",
  "shadowOffsetX=3",
  "shadowOffsetY=4",
  "shadowBlur=5",
  "shadowColor=#111",
  "beginPath()",
  "moveTo(-38,-50)",
  "lineTo(38,-50)",
  "arcTo(50,-50,50,-38,12)",
  "lineTo(50,38)",
  "arcTo(50,50,38,50,12)",
  "lineTo(-38,50)",
  "arcTo(-50,50,-50,38,12)",
  "lineTo(-50,-38)",
  "arcTo(-50,-50,-38,-50,12)",
  "closePath()",
  "strokeStyle=#000",
  "lineWidth=6",
  "setLineDash([obj])",
  "lineWidth=2",
  "stroke()",
  "beginPath()",
  "beginPath()",
  "moveTo(-38,-46.04)",
  "lineTo(38,-46.04)",
  "arcTo(46.04,-46.04,46.04,-38,8.04)",
  "lineTo(46.04,38)",
  "arcTo(46.04,46.04,38,46.04,8.04)",
  "lineTo(-38,46.04)",
  "arcTo(-46.04,46.04,-46.04,38,8.04)",
  "lineTo(-46.04,-38)",
  "arcTo(-46.04,-46.04,-38,-46.04,8.04)",
  "closePath()",
  "stroke()",
  "setLineDash([obj])",
  "shadowOffsetX=0",
  "shadowOffsetY=0",
  "shadowBlur=0",
  "shadowColor=transparent",
  "restore()",
]
`;
